fix bugs on leasing page and solve problems with corners on safari

--- a/src/scss/_baseStyles.scss
+++ b/src/scss/_baseStyles.scss
@@ -6,6 +6,14 @@
   text-decoration: none;
 }
 
+textarea,
+input[type="text"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
